--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="@string/channel_id"/>
+            android:value="@string/default_notification_channel_id"/>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -27,8 +27,8 @@
             android:resource="@color/purple_200" />
 
         <service
-            android:name=".PushNotificationListenerService"
-            android:exported="false">
+            android:name=".MyFirebaseMessagingService"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
