パスワード変更を可能に

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,10 +45,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".activity.PasswordActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
