--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging:23.1.0'
     implementation "androidx.work:work-runtime-ktx:2.7.1"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     def room_version = "2.4.3"
 
