update:バックグラウンド通知のアイコンを変更

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_notifications_black_24dp" />
+            android:resource="@drawable/ic_hcu" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
