add：ユーザーの新規登録機能追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,11 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity android:name=".activity.SignInActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+        </activity>
+
     </application>
 
 </manifest>
