--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_hcu_icon"
+        android:icon="@mipmap/ic_launcher_mozi"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_hcu_icon_round"
+        android:roundIcon="@mipmap/ic_launcher_mozi_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.App.Starting"
         tools:ignore="LockedOrientationActivity"
@@ -22,7 +22,7 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_hcu" />
+            android:resource="@drawable/ic_mozi_icon_adobe_express" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
