update：一部のwebをwebViewで表示可能に

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity android:name=".activity.WebActivity"
+            android:exported="true"
+            android:screenOrientation="fullSensor">
+        </activity>
+
     </application>
 
 </manifest>
